Add button testing for menu.fxml.